[package]
name = "libtiff-sys"
version = "0.2.0"
edition = "2021"
links = "tiff"
build = "build.rs"
readme = "README.md"
description = "Low-level Rust FFI bindings for libtiff"
repository = "https://github.com/lovasoa/libtiff-sys"
license-file = "LICENSE.md"
categories = ["external-ffi-bindings", "multimedia::images"]
keywords = ["tiff", "libtiff", "ffi", "image"]
include = [
    "Cargo.toml",
    "LICENSE.md",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src/**",
    "tests/**",
    "examples/**",
    "libtiff/CMakeLists.txt",
    "libtiff/build/**",
    "libtiff/configure.ac",
    "libtiff/LICENSE.md",
    "libtiff/README.md",
    "libtiff/VERSION",
    "libtiff/RELEASE-DATE",
    "libtiff/cmake/**",
    "libtiff/libtiff/**",
    "libtiff/libtiff-4.pc.in",
    "libtiff/port/**",
]

[features]
static = []
dynamic = []
jpeg = ["dep:mozjpeg-sys"]

[dependencies]
libc = "0.2"
mozjpeg-sys = { version = "1", optional = true }

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
pkg-config = "0.3"
